--- a/my-create-app/src/App.css
+++ b/my-create-app/src/App.css
@@ -40,3 +40,20 @@
 .read-the-docs {
   color: #888;
 }
+
+nav {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  height: 8vh;
+  background-color: royalblue;
+
+  & a {
+    color: white;
+    font-size: 1.5em;
+    padding: 15px;
+  }
+}
+
+
