--- a/my-create-app/src/App.css
+++ b/my-create-app/src/App.css
@@ -56,4 +56,13 @@ nav {
   }
 }
 
+main {
+  display: flex;
+  width: 100vw;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+
 
