--- a/my-create-app/src/App.css
+++ b/my-create-app/src/App.css
@@ -65,4 +65,13 @@ main {
   height: 70vh;
 }
 
+footer {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  height: 5vh;
+  background-color: darkblue;
+}
+
 
